--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,11 @@ h3 {
 /* # Classes */
 
 .centered_justify {
-	text-align: justify;
 	max-width: 50%;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.centered_justify p {
+	text-align: justify;
 }
