Changed the font to be serif

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 @font-face {
 	font-family: "Gidole";
-	src: url(../fonts/GidoleFont/Gidolinya-Regular.otf);
+	src: url(../fonts/GidoleFont/Gidole-Regular.ttf);
 }
 
 body {
