--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
 	src: url(../fonts/GidoleFont/Gidole-Regular.ttf);
 }
 
+html, body {
+	height: 100%;
+	width: 100%;
+}
+
 body {
 	background-color: rgb(30, 30, 30);
 	color: rgb(240, 255, 255);
