--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 body {
-	background-color: rgb(30, 30, 30);
-	color: rgb(240, 255, 255);
+	background-color: #1e1e1e;
+	color: #f0ffff;
 	font-size: 28px;
 	font-family: "Gidole", sans-serif;
 	margin: 0%;
@@ -40,7 +40,7 @@ h3 {
 
 a {
 	text-decoration: none;
-	color: purple;
+	color: #ce00ce;
 }
 
 /* # Classes */
