--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ h3 {
 
 a {
 	text-decoration: none;
-	color: #ce00ce;
+	color: #cece00;
 }
 
 /* # Classes */
@@ -59,7 +59,7 @@ a {
 }
 
 .waffles a {
-	background-color: black;
+	background-color: #151515;
 	border-radius: 1em;
 	padding: 1em;
 }
