Moved to Svelte

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,26 +1,28 @@
 /* # Main */
 
 @font-face {
-	font-family: "Gidole";
+	font-family: 'Gidole';
 	src: url(../fonts/GidoleFont/Gidole-Regular.ttf);
 }
 
-html,
-body {
+html {
 	height: 100%;
-	width: 100%;
 }
 
 body {
 	background-color: #1e1e1e;
 	color: #f0ffff;
 	font-size: 28px;
-	font-family: "Gidole", sans-serif;
+	font-family: 'Gidole', sans-serif;
 	margin: 0%;
 }
 
 header {
 	padding: 1em;
+}
+
+p {
+	text-align: center;
 }
 
 h1 {
@@ -62,4 +64,6 @@ a {
 	background-color: #151515;
 	border-radius: 1em;
 	padding: 1em;
+	min-height: 200px;
+	min-width: 200px;
 }
