--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,8 +5,15 @@
 	src: url(../fonts/GidoleFont/Gidole-Regular.ttf);
 }
 
-html {
+* {
+	overflow: auto;
+	box-sizing: border-box;
+}
+
+html,
+body {
 	height: 100%;
+	width: 100%;
 }
 
 body {
